# nexus-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PATENTS  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: license-compliance.yml
docs/: ARCHITECTURE.md  PATENT.md  attribution.md
examples/: README.md  basic_regime.py  basic_scoring.py  mcp_server.py
src/nexus_core/: __init__.py
src/nexus_core/ai/: __init__.py
src/nexus_core/ai/llm/: __init__.py
src/nexus_core/ai/research/: __init__.py
src/nexus_core/ai/sentiment/: __init__.py  finbert_wrapper.py
src/nexus_core/compliance/: __init__.py
src/nexus_core/compliance/ofac/: __init__.py
src/nexus_core/compliance/xbrl/: __init__.py
src/nexus_core/data/: __init__.py  providers.py
src/nexus_core/data/edgar/: __init__.py  edgartools_wrapper.py
src/nexus_core/data/market/: __init__.py
src/nexus_core/data/onchain/: __init__.py
src/nexus_core/engine/: __init__.py
src/nexus_core/engine/optimization/: __init__.py  pypfopt_wrapper.py
src/nexus_core/engine/pricing/: __init__.py
src/nexus_core/engine/regime/: __init__.py  classifier.py  codes.py  dampener.py  engine.py  hysteresis.py  signal_fetcher.py  signals.py  thresholds.py
src/nexus_core/engine/risk/: __init__.py
src/nexus_core/engine/scoring/: __init__.py  attribution.py  checks.py  enhancements.py  formatter.py  framework.py  tiers.py
src/nexus_core/mcp/: __init__.py
src/nexus_core/mcp/server/: __init__.py  app.py
src/nexus_core/planning/: __init__.py
src/nexus_core/planning/backtest/: __init__.py
src/nexus_core/planning/monte_carlo/: __init__.py
src/nexus_core/rebalancing/: __init__.py
src/nexus_core/rebalancing/tlh/: __init__.py
tests/: README.md  conftest.py  test_dampener.py  test_hysteresis.py  test_regime_classifier.py  test_regime_engine.py  test_regime_thresholds.py  test_scoring.py
